workshops/07_namespace/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-domain
  labels:
    name: nginx-domain
---
apiVersion: v1
kind: Namespace
metadata:
  name: apache-domain
  labels:
    name: apache-domain
